[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbflux"
version = "1.0.0"
description = "A simple database management abstraction layer built on SQLAlchemy"
authors = [
    { name="Abbas Bachari", email="abbas-bachari@hotmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "SQLAlchemy>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/abbas-bachari/dbflux"
